V3.x.x 新增规划模块： fly-feel-log 日志 fly-feel-message websocket实时通信 fly-feel-activiti 工作流 fly-feel-generate 代码生成

--- a/fly-feel-server-basis/src/main/resources/application.yml
+++ b/fly-feel-server-basis/src/main/resources/application.yml
@@ -4,6 +4,8 @@ logging:
     org.mybatis: debug
     io.gitee: debug
 spring:
+  activiti:
+    deployment-mode: never-fail
   main:
     allow-bean-definition-overriding: true
   messages:
