--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
+    <parent>
+        <groupId>io.gitee.cikaros</groupId>
+        <artifactId>fly-feel</artifactId>
+        <version>2.0.1</version>
+        <relativePath>../fly-feel/pom.xml</relativePath>
+    </parent>
+
     <modules>
         <module>fly-feel-server-license</module>
         <module>fly-feel-server-resource</module>
@@ -11,20 +16,14 @@
         <module>fly-feel-server-basis</module>
     </modules>
 
-    <parent>
-        <groupId>io.gitee.cikaros</groupId>
-        <artifactId>fly-feel</artifactId>
-        <version>2.0.1</version>
-        <relativePath/>
-    </parent>
-
+    <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
     <artifactId>fly-feel-tests</artifactId>
     <version>2.0.0</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <fly-feel.dependencies.version>2.0.1</fly-feel.dependencies.version>
     </properties>
 
     <dependencyManagement>
@@ -32,7 +31,7 @@
             <dependency>
                 <groupId>io.gitee.cikaros</groupId>
                 <artifactId>fly-feel-dependencies</artifactId>
-                <version>${fly-feel.dependencies.version}</version>
+                <version>2.0.2</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
