--- a/fly-feel-server-simple/pom.xml
+++ b/fly-feel-server-simple/pom.xml
@@ -23,6 +23,10 @@
         </dependency>
         <dependency>
             <groupId>io.gitee.cikaros</groupId>
+            <artifactId>fly-feel-message</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.gitee.cikaros</groupId>
             <artifactId>fly-feel-test</artifactId>
             <scope>test</scope>
         </dependency>
